# website

./: .dockerignore  .env.sample  .eslintrc  .gitignore  .jsbeautifyrc  .platform.app.yaml  .pylintrc  .python-version  .pyup.yml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.txt  Makefile  Pipfile  Procfile.dev  README.md  alembic.ini  docker-compose-fullstack.yml  docker-compose.yml  env-postgresql.env  logging.yml  manage.py  migrate.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  sumanpradhan.md  tox.ini
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: config.yml
.platform/: routes.yaml  services.yaml
ansible/: ansible.cfg  id_rsa  inventory  playbook.yml  requirements.yml
app/blog/: sitemaps.py  (+2 more)
blog/: admin.py  models.py  tests.py  urls.py  views.py
client/: app.js  app.scss  webpack.common.js  webpack.dev.js  webpack.prod.js
config/: celery.py  gunicorn.py  urls.py  wsgi.py
marketing/: forms.py  models.py  tasks.py  tests.py  urls.py  util.py  views.py
migrations/: env.py
pyslackersweb/: __init__.py  contexts.py  middleware.py  models.py  settings.py  tasks.py  views.py
requirements/: base.txt  development.txt  production.txt  testing.txt
scripts/: deploy.sh  update_app_version.sh
slack/: apps.py  forms.py  tasks.py  tests.py  urls.py  util.py  views.py
templates/: base.html
tests/: conftest.py  test_cli.py  test_pyslackersweb.py  test_sirbot.py  test_website.py
website/: __init__.py  celery.py  urls.py
(+200 files in other folders)
