[project]
name = "pyslackersweb"
version = "0.1.0"
description = "The website for the pythondev.slack.com community"
requires-python = ">=3.8"
dependencies = [
    # Web Framework
    "aiohttp==3.10.11",
    "aiohttp-jinja2==1.5",
    "aiohttp-oauth2==0.0.3",
    "aiohttp-remotes==1.0.0",
    # Database
    "asyncpgsa==0.27.1",
    "sqlalchemy==1.3.23",
    "psycopg2-binary==2.9.10",
    "alembic==1.5.8",
    # Cache/Redis
    "aioredis==1.3.1",
    # Task Scheduling
    "apscheduler>=3.10.0",
    # Slack Integration
    "slack-sansio>=1.1.0",
    # Server
    "gunicorn>=22.0.0",
    "uvloop==0.21.0",
    # Utilities
    "marshmallow==3.22.0",
    "sentry-sdk==1.0.0",
    "pyyaml==6.0.2",
    "urllib3<2.0",
]

[dependency-groups]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "pytest-aiohttp>=1.0.4",
    "pytest-asyncio>=0.23.5",
]
lint = [
    "black>=24.1.1",
    "pylint>=3.0.0",
]
typing = [
    "mypy>=1.8.0",
    "types-pyyaml>=6.0.12.20241230",
]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "typing" },
]

[tool.black]
line-length = 100
target-version = ["py312"]
exclude = """
/(
    \\.git
    | \\.tox
    | \\.venv
    | \\.env
)/
"""

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope="function"
